--- a/.github/workflows/commits-per-day.yml
+++ b/.github/workflows/commits-per-day.yml
@@ -17,9 +17,14 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: cd commits-per-day
-    - run: npm install
-    - run: npm run build --if-present
-    - run: npm test
+    - run: |
+        cd commits-per-day    
+        npm install
+    - run: |
+        cd commits-per-day
+        npm run build --if-present
+    - run: |
+        cd commits-per-day
+        npm test
       env:
         CI: true
